<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/nameText"
            android:text="@string/nameText"
            android:textSize="20dp"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/nameEditText"
            android:layout_toEndOf="@+id/nameText"
            android:hint="@string/guess"
            android:layout_marginTop="233dp"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnSetChangesName"
            android:text="@string/btn_set_changes"
            android:layout_below="@id/nameEditText"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"/>

    </RelativeLayout>


</LinearLayout>